--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@tailwindcss/vite": "^4.1.11",
     "better-sqlite3": "^12.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -59,9 +58,12 @@
     "date-fns": "^4.1.0",
     "electron-updater": "^6.3.9",
     "embla-carousel-react": "^8.6.0",
+    "epubjs": "^0.3.93",
     "input-otp": "^1.4.2",
+    "katex": "^0.16.22",
     "lucide-react": "^0.539.0",
     "next-themes": "^0.4.6",
+    "pdfjs-dist": "4.4.168",
     "react-day-picker": "^9.8.1",
     "react-hook-form": "^7.62.0",
     "react-resizable-panels": "^3.0.4",
@@ -77,6 +79,7 @@
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
     "@electron-toolkit/eslint-config-ts": "^3.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
+    "@tailwindcss/vite": "^4.1.12",
     "@types/node": "^22.17.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
