--- a/package.json
+++ b/package.json
@@ -58,15 +58,16 @@
     "date-fns": "^4.1.0",
     "electron-updater": "^6.3.9",
     "embla-carousel-react": "^8.6.0",
-    "epubjs": "^0.3.93",
+    "hnswlib-node": "1.4.2",
     "input-otp": "^1.4.2",
     "katex": "^0.16.22",
     "lucide-react": "^0.539.0",
     "next-themes": "^0.4.6",
-    "pdfjs-dist": "4.4.168",
+    "pdfjs-dist": "^4.10.38",
     "react-day-picker": "^9.8.1",
     "react-hook-form": "^7.62.0",
     "react-resizable-panels": "^3.0.4",
+    "react-window": "^1.8.10",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
