Added Local Gemma Embeddings

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ database/embeddings.db-wal
 database/hnsw_index.bin
 database/embeddings.db-wal
 database/embeddings.db-wal
+database/embeddings.db-wal
